<resources>
    <string name="app_name">Chain Oiler</string>
    <string name="weather">Weather</string>
    <string name="dryHot">Dry Hot</string>
    <string name="dryCold">Dry cold</string>
    <string name="wetHot">Wet hot</string>
    <string name="wetCold">Wet cold</string>
    <string name="edit">Edit</string>
    <string name="secondsDrop">Seconds/Drop :</string>
    <string name="temp">T° :</string>
    <string name="humidity">Humidity :</string>
    <string name="auto">Auto</string>
    <string name="spray">Spray</string>
    <string name="_1_drop">1-Drop</string>
    <string name="pump_on">Pump on</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
</resources>